--- a/src/main/resources/META-INF/resources/document.html
+++ b/src/main/resources/META-INF/resources/document.html
@@ -88,7 +88,7 @@ body {
 		
 		
 		<div class="content-head">
-			<div class="title">DDM4J API</div>
+			<div class="title">DDM4J API Document</div>
 			<div class="head-system">{{system}}</div>
 			<div class="desc">
 				<div>{{(version==null || version == '')?"V1.0":version}}</div>
@@ -372,7 +372,7 @@ body {
 		</div>
 		<!-- 页尾 -->
 		<div class="content-footer">
-			<span class="title">GitHub:&nbsp;&nbsp;<a href="https://github.com/ddm-document/api" target="_blank"> DDM - Springboot API document - V1.1</a></span>
+			<span class="title">GitHub:&nbsp;&nbsp;<a href="https://github.com/ddm4j/spring-boot-api-document" target="_blank"> DDM - Springboot API document - V2.1</a></span>
 <!--			<span class="version">V1.1</span>-->
 		</div>
 		
