--- a/src/main/resources/META-INF/resources/ddm4j/document.html
+++ b/src/main/resources/META-INF/resources/ddm4j/document.html
@@ -298,9 +298,8 @@ body {
 						<thead>
 							<tr>
 								<th class="left field">字段</th>
-
 								<th class="type">类型</th>
-								<th class="required">必填</th>
+								<th class="required">必需</th>
 								<th class="left">示例说明</th>
 							</tr>
 						</thead>
