--- a/src/main/resources/META-INF/resources/ddm4j/document.html
+++ b/src/main/resources/META-INF/resources/ddm4j/document.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="cn">
 <head>
+<meta name="renderer" content="webkit" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta charset="utf-8">
 <meta name="viewport"
