1.修改文档页面，测试窗口不能移动的问题 2.ApiParamCheckFailHandler，增加返回值对象

--- a/src/main/resources/META-INF/resources/ddm4j/document.html
+++ b/src/main/resources/META-INF/resources/ddm4j/document.html
@@ -673,7 +673,7 @@ body {
         	drag(el, bindings){
        	      el.onmousedown = function(e) {
        	    	// 限制，只能是拖动标题才能移动
-       	    	if(e.path[0].id != "test_bar"){
+       	    	if(e.target.id != "test_bar"){
        	    		return;
        	    	}
        	        var disx = e.pageX - el.offsetLeft;
